Corrected the errors from yuesterday around registration with face and layout

--- a/idm/templates/product.html
+++ b/idm/templates/product.html
@@ -1,4 +1,4 @@
-{% extends "b.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block main_content %}
@@ -268,7 +268,7 @@
             maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et
             aut
             officiis debitis aut rerum.</p>
-          <p>by <a><strong>Daniel Ale</strong></a>, 19/08/2018</p>
+          <p>by <a><strong>Sharon Alese</strong></a>, 19/08/2018</p>
           <a class="btn btn-primary btn-md">Read more</a>
 
         </div>
