--- a/idm/templates/registration/partial.html
+++ b/idm/templates/registration/partial.html
@@ -1,20 +1,48 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
-{% block title %}Hey!{% endblock %}
+{% block main_content %}
+<div class="container">
+    <!--Section: Contact-->
+    <section id="contact">
 
-{% block content %}
-    <section id="register">
-      <div class="container-fluid">
-        <div class="col-md-8" style="min-height: 500px;">
-        {% if user.is_authenticated %} Hello, {{ user.username }}!
-            <p>
-                Welcome!
-            </p>
-            <p>You are not verified yet. <a href="{% url 'verify-face' user.pk %}">Verify</a> </p>
-        {% else %}
-        <p>You are not authorized yet.</p>
-        {% endif %}
+        <!-- Heading -->
+        <h2 class="mb-5 font-weight-bold text-center">Login</h2>
+
+        <!--Grid row-->
+        <div class="row">
+
+            <!--Grid column-->
+            <div class="col-lg-5 col-md-12">
+                <!--Grid row-->
+                <div class="row text-center">
+                    <p class="lead ml-5">Identity Management Image</p>
+                </div>
+                <!--Grid row-->
+                <!--Google map-->
+                <div id="map-container" class="z-depth-1-half map-container mb-5" style="height: 400px"></div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-lg-7 col-md-12">
+                <div class="p-5">
+                    {% if user.is_authenticated %} Hello, {{ user.username }}!
+                    <p>
+                        Welcome!
+                    </p>
+                    <p>You are not verified yet. <a href="{{ profile.get_verify_url }}">Verify</a> </p>
+                    {% else %}
+                    <p>You are not authorized yet.</p>
+                    {% endif %}
+                </div>
+            </div>
+            <!--Grid column-->
+
         </div>
-      </div>
+        <!--Grid row-->
+
     </section>
+</div>
+
 {% endblock %}
