--- a/idm/templates/users.html
+++ b/idm/templates/users.html
@@ -1,19 +1,25 @@
-{% extends 'b.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
-{% block content %}
+{% block main_content %}
 {% for usr in users %}
-<div class="row" style="margin-top: 12px; background-color: #f7f1f1">
+<div class="row" style="margin-top: 6px; margin-bottom: 6px; background-color: #9ccff7">
   <div class="col-2" style="padding-top: 10px;">
-    <img src="{% static 'img/img1.png' %}" height="170px" width="170px" alt="user" srcset="">
+    <img src="{{ usr.face }}" height="170px" width="170px" alt="user" srcset="">
   </div>
   <div class="col-9" style="padding-top: 10px;">
     <div class="row">
       <div class="col-3">
         <h6><b>Name</b></h6>
         <p>{{ usr.name }}</p>
+        <hr>
+        <h6><b>Marital Status</b></h6>
+        <p>{{ usr.marital_status }}</p>
       </div>
       <div class="col-3">
+        <h6><b>Residence</b></h6>
+        <p>{{ usr.residence }}</p>
+        <hr>
         <h6><b>Email</b></h6>
         <p>{{ usr.email }}</p>
         <hr>
@@ -21,6 +27,12 @@
         <p>09087667766</p>
       </div>
       <div class="col-5">
+        <h6><b>Education</b></h6>
+        <p>{{ usr.education }}</p>
+        <hr>
+        <h6>Occupation</h6>
+        <p>{{ usr.occupation }}</p>
+        <hr>
         <h6><b>Bio</b></h6>
         <p style="text-align: justify;"> {{ usr.bio }} </p>
       </div>
@@ -28,4 +40,4 @@
   </div>
 </div>
 {% endfor %}
-{% endblock content %}
+{% endblock %}
