--- a/idm/templates/base.html
+++ b/idm/templates/base.html
@@ -64,7 +64,11 @@
               <a class="nav-link"><i class="fa fa-instagram"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" class="btn btn-outline-cyan">Sign In</a>
+              {% if user.is_authenticated %}
+              <a class="nav-link" href="{% url 'logout' %}" class="btn btn-outline-cyan">Logout</a>
+              {% else %}
+              <a class="nav-link" href="{% url 'login' %}" class="btn btn-outline-cyan">Sign In</a>
+              {% endif %}
             </li>
           </ul>
         </div>
