Changed face profile

--- a/idm/templates/users.html
+++ b/idm/templates/users.html
@@ -5,7 +5,7 @@
 {% for usr in users %}
 <div class="row" style="margin-top: 6px; margin-bottom: 6px; background-color: #9ccff7">
   <div class="col-2" style="padding-top: 10px;">
-    <img src="{{ usr.face }}" height="170px" width="170px" alt="user" srcset="">
+    <img src="{{ usr.profile_face }}" height="170px" width="170px" alt="user" srcset="">
   </div>
   <div class="col-9" style="padding-top: 10px;">
     <div class="row">
