--- a/idm/templates/index.html
+++ b/idm/templates/index.html
@@ -22,8 +22,13 @@
                         <hr class="hr-light">
 
                         <!-- Description -->
-                        <h4 class="white-text my-4">IdM covers issues such as how users gain an identity, the
-                            protection of that identity and the technologies supporting that protection.
+                        <h4 class="white-text my-4">Identity management (IdM) is the task of controlling information
+                            about users on computers. Such information includes information that authenticates the
+                            identity of a user, and information that describes information and actions they are
+                            authorized to access and/or perform. It also includes the management of descriptive
+                            information about the user and how and by whom that information can be accessed and
+                            modified. Managed entities typically include users, hardware and network resources and even
+                            applications.
                         </h4>
                         <a href="{% url 'signup' %}" class="btn btn-outline-white">Register<i class="fa fa-book ml-2"></i></a>
 
