--- a/idm/templates/base.html
+++ b/idm/templates/base.html
@@ -15,6 +15,8 @@
   <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -48,6 +50,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'products' %}">Secured</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'logs' %}" class="nav-link">Auth Logs</a>
             </li>
           </ul>
           <!-- Links -->
@@ -118,6 +123,11 @@
       interval: 3000,
     })
   </script>
+
+  {% block extra_script %}
+
+  {% endblock extra_script %}
+
   <!-- Google Maps settings -->
   <script>
     // Regular map
